Fix: dropdown menu no longer disappears behing contact form on mobile

--- a/assets/css/_contact.css
+++ b/assets/css/_contact.css
@@ -1,5 +1,5 @@
 .contact {
-  z-index: 100!important;
+  z-index: 99!important;
   width: 100%;
   height: 100%;
   display: flex;
@@ -13,7 +13,7 @@
 }
 
 .contact .contact-wrapper {
-  z-index: 999!important;
+  z-index: 99!important;
   width: 100%;
   height: 100%;
   display: flex;
@@ -28,7 +28,7 @@
 }
 
 .contact h2 {
-  z-index: 100!important;
+  z-index: 99!important;
   margin-bottom: 0.5rem;
   font-size: 5.6rem;
   font-weight: 700;
@@ -48,7 +48,7 @@
 }
 
 .contact-content h3 {
-  z-index: 100!important;
+  z-index: 99!important;
   margin-bottom: 0.5rem;
   font-size: 3rem;
   font-weight: 700;
@@ -57,7 +57,7 @@
 }
 
 .contact-content p {
-  z-index: 100!important;
+  z-index: 99!important;
   margin-bottom: 0.5rem;
   font-size: 2rem;
   font-weight: 500;
@@ -66,7 +66,7 @@
 }
 
 .contact-content {
-  z-index: 100!important;
+  z-index: 99!important;
   align-items: left!important;
 }
 
@@ -80,7 +80,7 @@
 }
 
 .contact .heading {
-  z-index: 100!important;
+  z-index: 99!important;
 }
 
 contact form {
@@ -88,7 +88,7 @@ contact form {
   margin: 1rem auto;
   text-align: center;
   margin-bottom: 4rem;
-  z-index: 100!important;
+  z-index: 99!important;
 }
 
 .contact form .contact-form-box1,
@@ -96,7 +96,7 @@ contact form {
   display: flex;
   justify-content: space-between;
   flex-wrap: wrap;
-  z-index: 100!important;
+  z-index: 99!important;
 }
 
 .contact form .contact-form-box1 input,
