--- a/assets/css/_navbar.css
+++ b/assets/css/_navbar.css
@@ -135,7 +135,7 @@ li {
 
 /* Dropdown Mobile Menu */
 .dropdown_menu {
-  z-index: 100;
+  z-index: 9000!important;
   display: none;
   position: absolute;
   right: 2rem;
@@ -159,7 +159,7 @@ li {
   display: flex;
   align-items: center;
   justify-content: center;
-  z-index: 100;
+  z-index: 9000!important;
 }
 
 .navbar li a.active,
